--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <ul>
             <li><a href="#about">About Me</a></li>
             <li><a href="#experience">Experience</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
           </ul>
@@ -285,14 +286,16 @@
         </div>
         <ul class="education-lists">
           <li class="education-options">
-            <p>Master's in Digital Engineering, OVGU</p>
-            <p>University: Otto Von Guericke University, Magdeburg</p>
-            <p>CGPA: 1.9 (German Standard)</p>
+            <h2 class="ed-year">2022-2025 (Expected)</h2>
+            <h3 class="ed-degree">Master's in Digital Engineering, OVGU</h3>
+            <h4 class="ed-uni">University: Otto Von Guericke University, Magdeburg</h4>
+            <p class="ed-grade">CGPA: 1.9 (German Standard)</p>
           </li>
           <li class="education-options">
-            <p>Bachelors in Computer Science & Engineering</p>
-            <p>University: Government Engineering College, Palakkad</p>
-            <p>CGPA: 2.5 (German Standard)</p>
+            <h2 class="ed-year">2015-2019</h2>
+            <h3 class="ed-degree">Bachelors in Computer Science & Engineering</h3>
+            <h4 class="ed-uni">University: Government Engineering College, Palakkad</h4>
+            <p class="ed-grade">CGPA: 2.5 (German Standard)</p>
           </li>
         </ul>
       </section>
