add remaining sections.

--- a/index.html
+++ b/index.html
@@ -249,34 +249,111 @@
       </section>
 
       <section id="projects">
-        <div class="title">
-          <h2>Projects</h2>
-          <div class="underline"></div>
-        </div>
+        <div class="overlay">
+          <div class="title">
+            <h2>Projects</h2>
+            <div class="underline"></div>
+          </div>
 
-        <ul class="project-lists">
-          <li class="project-option">
-            <h3>Movie Search Web App (Next.js)</h3>
-            <p>
-              Developed a movie search app with caching and recommendations
-              functionality. The app uses Next.js for server-side rendering.
-            </p>
-          </li>
-          <li class="project-option">
-            <h3>Interview QA System (Flask, NLP)</h3>
-            <p>
-              Built an intelligent QA system to automate interview processes,
-              using pre-trained Google News word vectors and face recognition.
-            </p>
-          </li>
-          <li class="project-option">
-            <h3>DL Segmentation of Meningiomas</h3>
-            <p>
-              Current work on deep learning models for medical imaging, focusing
-              on tumor segmentation using advanced AI techniques.
-            </p>
-          </li>
-        </ul>
+          <ul class="project-lists">
+            <li class="project-option">
+              <h3>OMDB Browser</h3>
+              <p>
+                Developed a movie search app where users can search for movies,
+                which lists and shows the meta-data of the movie with caching
+                and recommendations functionality.
+              </p>
+              <div class="project-icon">
+                <i class="devicon-nextjs-original-wordmark"></i>
+                <i class="devicon-tailwindcss-plain-wordmark"></i>
+              </div>
+            </li>
+            <li class="project-option">
+              <h3>
+                Health-LLM: Personalized Retrieval-Augmented Disease Diagnosis
+                System
+              </h3>
+              <p>
+                Developed a Health-LLM system using a pre-trained BioMistral-7B
+                model and langchain framework. Utilized RAG techniques to
+                retrieve relevant documents from vector databases , drawing
+                insights from few-shot examples and retrieved health reports to
+                get context relevant response.
+              </p>
+              <div class="project-icon">
+                <i class="devicon-python-plain-wordmark"></i>
+                <i class="devicon-pytorch-plain-wordmark"></i>
+              </div>
+            </li>
+            <li class="project-option">
+              <h3>MLOps-Driven Real Time Object Detection Web App</h3>
+              <p>
+                Created a real-time image segmentation app with Streamlit and
+                YOLOv8 , deployed on AWS SageMaker .
+              </p>
+              <div class="project-icon">
+                <i class="devicon-streamlit-plain-wordmark"></i>
+                <i class="devicon-pytorch-plain-wordmark"></i>
+                <i class="devicon-amazonwebservices-plain-wordmark"></i>
+              </div>
+            </li>
+            <li class="project-option">
+              <h3>Interview Automation System</h3>
+              <p>
+                Built an intelligent QA system with NLP techniques for interview
+                automation. Leveraged a pre-trained Google News word vector
+                model and applied Word Mover's Distance to accurately assess the
+                semantic similarity between candidate answers and expected
+                responses
+              </p>
+              <div class="project-icon">
+                <i class="devicon-python-plain-wordmark"></i>
+                <i class="devicon-flask-original-wordmark"></i>
+                <i class="devicon-opencv-plain-wordmark"></i>
+                <i class="devicon-jquery-plain-wordmark"></i>
+                <i class="devicon-bootstrap-plain"></i>
+              </div>
+            </li>
+            <li class="project-option">
+              <h3>Time series forecasting with Google VertexAI</h3>
+              <p>
+                Built and deployed a forecasting model on VertexAI . Vizualized
+                the result and created dashboard with Google Looker Studio .
+              </p>
+              <div class="project-icon">
+                <i class="devicon-googlecloud-plain-wordmark"></i>
+              </div>
+            </li>
+            <li class="project-option">
+              <h3>Chatbot for E-commerce</h3>
+              <p>
+                A simple AI-Based chatbot designed to provide support for
+                e-commerce platform. The chatbot handle common queries like
+                greetings, farewells, payment methods, return policy etc.Built
+                using simple feed-forward Neural Network with 2 hidden layers.
+              </p>
+              <div class="project-icon">
+                <i class="devicon-pytorch-plain-wordmark"></i>
+                <i class="devicon-flask-original-wordmark"></i>
+                <i class="devicon-javascript-plain"></i>
+              </div>
+            </li>
+            <li class="project-option">
+              <h3>Search Result Clustering</h3>
+              <p>
+                A web application where user can search for a topic and
+                visualize cluster of documents crawled from Wikipedia Topics,
+                using elastic search and Kmeans clustering.
+              </p>
+              <div class="project-icon">
+                <i class="devicon-react-original-wordmark"></i>
+                <i class="devicon-python-plain-wordmark"></i>
+                <i class="devicon-scikitlearn-plain"></i>
+                <i class="devicon-elasticsearch-plain-wordmark"></i>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section id="education">
@@ -288,13 +365,19 @@
           <li class="education-options">
             <h2 class="ed-year">2022-2025 (Expected)</h2>
             <h3 class="ed-degree">Master's in Digital Engineering, OVGU</h3>
-            <h4 class="ed-uni">University: Otto Von Guericke University, Magdeburg</h4>
+            <h4 class="ed-uni">
+              University: Otto Von Guericke University, Magdeburg
+            </h4>
             <p class="ed-grade">CGPA: 1.9 (German Standard)</p>
           </li>
           <li class="education-options">
             <h2 class="ed-year">2015-2019</h2>
-            <h3 class="ed-degree">Bachelors in Computer Science & Engineering</h3>
-            <h4 class="ed-uni">University: Government Engineering College, Palakkad</h4>
+            <h3 class="ed-degree">
+              Bachelors in Computer Science & Engineering
+            </h3>
+            <h4 class="ed-uni">
+              University: Government Engineering College, Palakkad
+            </h4>
             <p class="ed-grade">CGPA: 2.5 (German Standard)</p>
           </li>
         </ul>
