--- a/index.html
+++ b/index.html
@@ -54,13 +54,24 @@
               developed applications in areas like computer vision, NLP, and
               full-stack web development.
               <br />
-              With a solid background in research and industry, I’ve contributed
-              to projects that range from real-time image segmentation and
-              disease diagnosis systems to intelligent interview automation
-              platforms. I am passionate about applying my skills to innovative
-              projects that push the boundaries of technology and improve
-              real-world systems.
+              With a solid background in research and industry, I am passionate
+              about applying my skills to innovative projects that push the
+              boundaries of technology and improve real-world systems.
             </p>
+            <br />
+            <div class="socials">
+              <a href="https://www.linkedin.com/in/nadeem-nazer-87056114b/" title="LinkedIn">
+                <img
+                alt="linkedin"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+                />
+              </a>
+              <a href="https://github.com/nadeemn" title="Github">
+                <img alt="github"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original-wordmark.svg"
+                />
+              </a>
+            </div>
           </div>
         </div>
       </section>
