add new project.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nadeem's Portfolio</title>
+    <meta
+      name="description"
+      content="Nadeem Nazer's personal website showcasing projects in AI, machine learning, and software development."
+    />
+    <meta
+      name="keywords"
+      content="Nadeem Nazer, AI, machine learning, deep learning, software development, Python, portfolio"
+    />
+    <title>Nadeem Nazer</title>
 
     <link
       rel="stylesheet"
@@ -60,14 +68,18 @@
             </p>
             <br />
             <div class="socials">
-              <a href="https://www.linkedin.com/in/nadeem-nazer-87056114b/" title="LinkedIn">
+              <a
+                href="https://www.linkedin.com/in/nadeem-nazer-87056114b/"
+                title="LinkedIn"
+              >
                 <img
-                alt="linkedin"
+                  alt="linkedin"
                   src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
                 />
               </a>
               <a href="https://github.com/nadeemn" title="Github">
-                <img alt="github"
+                <img
+                  alt="github"
                   src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original-wordmark.svg"
                 />
               </a>
@@ -267,6 +279,20 @@
           </div>
 
           <ul class="project-lists">
+            <li class="project-option">
+              <h3>Unsupervised Image Classification</h3>
+              <p>
+                Automatically grouped images into semantically meaningful
+                clusters without ground truth using SCAN (Semantic Clustering by
+                Adopting Nearest neighbors) method. For explanation, applied
+                grad-cam to generate a heatmap to show important features of
+                images.
+              </p>
+              <div class="project-icon">
+                <i class="devicon-pytorch-plain-wordmark"></i>
+                <i class="devicon-python-plain-wordmark"></i>
+              </div>
+            </li>
             <li class="project-option">
               <h3>OMDB Browser</h3>
               <p>
